# pds

./: .gitignore
aula1/: principal.c
aula3/: contador.c  contador.h  ponteiro.c  ponto.c  principal.c
aula3/ContaCorrente/: ContaCorrente.c  ContaCorrente.h  principalContaCorrente.c
aula3/ContaCorrenteOpaca/: ContaCorrenteOpaca.c  ContaCorrenteOpaca.h  principalContaCorrenteOpaca.c
aula3/Contador/: principal_contador.c
aula3/Ponteiro/: alocacao_dinamica.c  alocacao_dinamica2.c  ponteiro2.c
aula3/Ponto/: ponto.h
exercicios/Revisao/: exercicio1.c  exercicio2.c  exercicio3.c  exercicio4.c  exercicio5.c
exercicios/arvore_inteiro/: arvore.c  arvore.h  main.c
exercicios/banco/: conta.cpp  conta.hpp  main.cpp  rodrigo
exercicios/banco_organizado/: banco.cpp  banco.hpp  conta.cpp  conta.hpp  correntista.cpp  correntista.hpp  main.cpp  saida
exercicios/banco_organizado_static_private/: a.out  banco.cpp  banco.hpp  conta.cpp  conta.hpp  correntista.cpp  correntista.hpp  main.cpp
exercicios/destrutor/: ClasseA.cpp  ClasseA.hpp  ClasseB.cpp  ClasseB.hpp  main.cpp  saida
exercicios/fila_inteiro/: fila.c  fila.h  main.c
exercicios/heap_stack/: exemplo.cpp  exemplo.hpp  main.cpp  readme.txt  saida
exercicios/libmath-exercicio/: main.c  matematica.c  matematica.h
exercicios/revisao-prova-2/ex1/: CMakeLists.txt  main.cpp
exercicios/revisao-prova-2/ex1/cabecalho/: Estagiario.hpp  Funcionario.hpp  FuncionarioRegular.hpp  Gerente.hpp
exercicios/revisao-prova-2/ex1/implementacao/: Estagiario.cpp  Funcionario.cpp  FuncionarioRegular.cpp  Gerente.cpp
(+134 files in other folders)
